# tsptw-m

./: LICENSE  README.md
code/: .gitignore  CMakeLists.txt
code/include/: debug_utils.h  input.h  instance.h  label.h  local_search.h  log.h  print.h  route.h  solver.h  stopwatch.h  time_guardian.h  types.h
code/src/: debug_utils.cpp  input.cpp  instance.cpp  label.cpp  local_search.cpp  log.cpp  main.cpp  route.cpp  solver.cpp  stopwatch.cpp  time_guardian.cpp
experiments/: basic-128.json  basic-256-ms.json  basic-256.json  basic-512.json  basic-64-ms.json
instances/: asc96_index.sh  create_indices.sh  d_ohl07_index.sh  das10_index.sh  download_fontaine_etal.py  dum95_index.sh  extract_benchmark.py  gen98_index.sh  get_benchmark.py  lan93_index.sh  ohl07_index.sh  pes98_index.sh  pot96_index.sh  rifc20_index.sh  transform_dolh.py  transform_instances.py
kaleidoscope/: .gitignore  index.html
kaleidoscope/js/parsers/: tsptwm_lbfs_parser.js  tsptwm_ms_solver_parser.js  tsptwm_route_parser.js  tsptwm_solver_parser.js
runner/: runner.py
